--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
     id "org.sonarqube" version "3.3"
+    id 'org.hidetake.swagger.generator' version '2.18.2'
 }
 
 group = 'com.chetan'
@@ -20,6 +21,9 @@ configurations {
 }
 
 dependencies {
+
+
+    implementation 'io.swagger.codegen.v3:swagger-codegen:3.0.30'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.mariadb.jdbc:mariadb-java-client'
@@ -44,6 +48,8 @@ dependencies {
     integrationtestImplementation 'io.rest-assured:rest-assured:4.4.0'
     integrationtestImplementation 'io.rest-assured:json-path:4.4.0'
     integrationtestImplementation 'org.hamcrest:hamcrest-all:1.3'
+
+    swaggerCodegen 'org.openapitools:openapi-generator-cli:3.3.4'
 }
 
 test {
@@ -68,4 +74,12 @@ integrationTest {
     useJUnitPlatform()
 }
 
-check.dependsOn integrationTest
+swaggerSources {
+    openApiHtml {
+        inputFile = file("$projectDir/open-api-docs/open-api.yaml")
+        code {
+            language = 'html'
+        }
+    }
+
+}
