--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: ca
         run: |
-          echo ${{ github.token }}
+          echo "apple"
       - name: git
         run: |
           # setup the username and email. I tend to use 'GitHub Actions Bot' with no email by default
