--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -20,8 +20,8 @@ jobs:
         run: |
           # setup the username and email. I tend to use 'GitHub Actions Bot' with no email by default
           git --version
-          git config user.name "test123"
-          git config user.email "test@test.com"
+          git config user.name "chetanrp1906"
+          git config user.email "chetanrp19@gmail.com"
           git status
           git tag ${{ github.event.inputs.tagName }}
           git push origin ${{ github.event.inputs.tagName }}
